GramaticaParser.py
# Generated from Gramatica.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GramaticaParser ( Parser ):

    grammarFileName = "Gramatica.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'{'", "'}'", "';'", "'if'", 
                     "'else'", "'while'", "'for'", "'print'", "'='", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'^'", "'=='", "'!='", 
                     "'<'", "'>'", "'<='", "'>='" ]

    symbolicNames = [ "<INVALID>", "PARENTESIS_INICIAL", "PARENTESIS_FINAL", 
                      "LLAVES_INICIAL", "LLAVES_FINAL", "FIN_DE_LINEA", 
                      "IF", "ELSE", "WHILE", "FOR", "PRINT", "ASIGNACION", 
                      "MAS", "MENOS", "MULTIPLICACION", "DIVISION", "MODULO", 
                      "POW", "IGUAL", "DIFERENTE", "MENOR", "MAYOR", "MENOR_IGUAL_QUE", 
                      "MAYOR_IGUAL_QUE", "VARIABLE", "NUMERO", "WS" ]

    RULE_gramatica = 0
    RULE_instruccion = 1
    RULE_declaracion = 2
    RULE_asignacion_expr = 3
    RULE_sentencia_print = 4
    RULE_sentencia_if = 5
    RULE_sentencia_while = 6
    RULE_sentencia_for = 7
    RULE_for_inicializacion = 8
    RULE_for_condicion = 9
    RULE_for_incremento = 10
    RULE_bloque = 11
    RULE_expr = 12

    ruleNames =  [ "gramatica", "instruccion", "declaracion", "asignacion_expr", 
                   "sentencia_print", "sentencia_if", "sentencia_while", 
                   "sentencia_for", "for_inicializacion", "for_condicion", 
                   "for_incremento", "bloque", "expr" ]

    EOF = Token.EOF
    PARENTESIS_INICIAL=1
    PARENTESIS_FINAL=2
    LLAVES_INICIAL=3
    LLAVES_FINAL=4
    FIN_DE_LINEA=5
    IF=6
    ELSE=7
    WHILE=8
    FOR=9
    PRINT=10
    ASIGNACION=11
    MAS=12
    MENOS=13
    MULTIPLICACION=14
    DIVISION=15
    MODULO=16
    POW=17
    IGUAL=18
    DIFERENTE=19
    MENOR=20
    MAYOR=21
    MENOR_IGUAL_QUE=22
    MAYOR_IGUAL_QUE=23
    VARIABLE=24
    NUMERO=25
    WS=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class GramaticaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(GramaticaParser.EOF, 0)

        def instruccion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaParser.InstruccionContext)
            else:
                return self.getTypedRuleContext(GramaticaParser.InstruccionContext,i)


        def getRuleIndex(self):
            return GramaticaParser.RULE_gramatica

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGramatica" ):
                listener.enterGramatica(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGramatica" ):
                listener.exitGramatica(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGramatica" ):
                return visitor.visitGramatica(self)
            else:
                return visitor.visitChildren(self)




    def gramatica(self):

        localctx = GramaticaParser.GramaticaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_gramatica)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 26
                self.instruccion()
                self.state = 29 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 16779072) != 0)):
                    break

            self.state = 31
            self.match(GramaticaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracion(self):
            return self.getTypedRuleContext(GramaticaParser.DeclaracionContext,0)


        def sentencia_print(self):
            return self.getTypedRuleContext(GramaticaParser.Sentencia_printContext,0)


        def sentencia_if(self):
            return self.getTypedRuleContext(GramaticaParser.Sentencia_ifContext,0)


        def sentencia_while(self):
            return self.getTypedRuleContext(GramaticaParser.Sentencia_whileContext,0)


        def sentencia_for(self):
            return self.getTypedRuleContext(GramaticaParser.Sentencia_forContext,0)


        def getRuleIndex(self):
            return GramaticaParser.RULE_instruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccion" ):
                listener.enterInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccion" ):
                listener.exitInstruccion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccion" ):
                return visitor.visitInstruccion(self)
            else:
                return visitor.visitChildren(self)




    def instruccion(self):

        localctx = GramaticaParser.InstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_instruccion)
        try:
            self.state = 38
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [24]:
                self.enterOuterAlt(localctx, 1)
                self.state = 33
                self.declaracion()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 34
                self.sentencia_print()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 35
                self.sentencia_if()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 4)
                self.state = 36
                self.sentencia_while()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 5)
                self.state = 37
                self.sentencia_for()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion_expr(self):
            return self.getTypedRuleContext(GramaticaParser.Asignacion_exprContext,0)


        def FIN_DE_LINEA(self):
            return self.getToken(GramaticaParser.FIN_DE_LINEA, 0)

        def getRuleIndex(self):
            return GramaticaParser.RULE_declaracion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion" ):
                listener.enterDeclaracion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion" ):
                listener.exitDeclaracion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracion" ):
                return visitor.visitDeclaracion(self)
            else:
                return visitor.visitChildren(self)




    def declaracion(self):

        localctx = GramaticaParser.DeclaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaracion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.asignacion_expr()
            self.state = 41
            self.match(GramaticaParser.FIN_DE_LINEA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Asignacion_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(GramaticaParser.VARIABLE, 0)

        def ASIGNACION(self):
            return self.getToken(GramaticaParser.ASIGNACION, 0)

        def expr(self):
            return self.getTypedRuleContext(GramaticaParser.ExprContext,0)


        def getRuleIndex(self):
            return GramaticaParser.RULE_asignacion_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion_expr" ):
                listener.enterAsignacion_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion_expr" ):
                listener.exitAsignacion_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion_expr" ):
                return visitor.visitAsignacion_expr(self)
            else:
                return visitor.visitChildren(self)




    def asignacion_expr(self):

        localctx = GramaticaParser.Asignacion_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_asignacion_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(GramaticaParser.VARIABLE)
            self.state = 44
            self.match(GramaticaParser.ASIGNACION)
            self.state = 45
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sentencia_printContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(GramaticaParser.PRINT, 0)

        def PARENTESIS_INICIAL(self):
            return self.getToken(GramaticaParser.PARENTESIS_INICIAL, 0)

        def expr(self):
            return self.getTypedRuleContext(GramaticaParser.ExprContext,0)


        def PARENTESIS_FINAL(self):
            return self.getToken(GramaticaParser.PARENTESIS_FINAL, 0)

        def FIN_DE_LINEA(self):
            return self.getToken(GramaticaParser.FIN_DE_LINEA, 0)

        def getRuleIndex(self):
            return GramaticaParser.RULE_sentencia_print

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia_print" ):
                listener.enterSentencia_print(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia_print" ):
                listener.exitSentencia_print(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentencia_print" ):
                return visitor.visitSentencia_print(self)
            else:
                return visitor.visitChildren(self)




    def sentencia_print(self):

        localctx = GramaticaParser.Sentencia_printContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_sentencia_print)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(GramaticaParser.PRINT)
            self.state = 48
            self.match(GramaticaParser.PARENTESIS_INICIAL)
            self.state = 49
            self.expr(0)
            self.state = 50
            self.match(GramaticaParser.PARENTESIS_FINAL)
            self.state = 51
            self.match(GramaticaParser.FIN_DE_LINEA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sentencia_ifContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self, i:int=None):
            if i is None:
                return self.getTokens(GramaticaParser.IF)
            else:
                return self.getToken(GramaticaParser.IF, i)

        def PARENTESIS_INICIAL(self, i:int=None):
            if i is None:
                return self.getTokens(GramaticaParser.PARENTESIS_INICIAL)
            else:
                return self.getToken(GramaticaParser.PARENTESIS_INICIAL, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaParser.ExprContext)
            else:
                return self.getTypedRuleContext(GramaticaParser.ExprContext,i)


        def PARENTESIS_FINAL(self, i:int=None):
            if i is None:
                return self.getTokens(GramaticaParser.PARENTESIS_FINAL)
            else:
                return self.getToken(GramaticaParser.PARENTESIS_FINAL, i)

        def bloque(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaParser.BloqueContext)
            else:
                return self.getTypedRuleContext(GramaticaParser.BloqueContext,i)


        def ELSE(self, i:int=None):
            if i is None:
                return self.getTokens(GramaticaParser.ELSE)
            else:
                return self.getToken(GramaticaParser.ELSE, i)

        def getRuleIndex(self):
            return GramaticaParser.RULE_sentencia_if

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia_if" ):
                listener.enterSentencia_if(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia_if" ):
                listener.exitSentencia_if(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentencia_if" ):
                return visitor.visitSentencia_if(self)
            else:
                return visitor.visitChildren(self)




    def sentencia_if(self):

        localctx = GramaticaParser.Sentencia_ifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_sentencia_if)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(GramaticaParser.IF)
            self.state = 54
            self.match(GramaticaParser.PARENTESIS_INICIAL)
            self.state = 55
            self.expr(0)
            self.state = 56
            self.match(GramaticaParser.PARENTESIS_FINAL)
            self.state = 57
            self.bloque()
            self.state = 67
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 58
                    self.match(GramaticaParser.ELSE)
                    self.state = 59
                    self.match(GramaticaParser.IF)
                    self.state = 60
                    self.match(GramaticaParser.PARENTESIS_INICIAL)
                    self.state = 61
                    self.expr(0)
                    self.state = 62
                    self.match(GramaticaParser.PARENTESIS_FINAL)
                    self.state = 63
                    self.bloque() 
                self.state = 69
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 72
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 70
                self.match(GramaticaParser.ELSE)
                self.state = 71
                self.bloque()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sentencia_whileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(GramaticaParser.WHILE, 0)

        def PARENTESIS_INICIAL(self):
            return self.getToken(GramaticaParser.PARENTESIS_INICIAL, 0)

        def expr(self):
            return self.getTypedRuleContext(GramaticaParser.ExprContext,0)


        def PARENTESIS_FINAL(self):
            return self.getToken(GramaticaParser.PARENTESIS_FINAL, 0)

        def bloque(self):
            return self.getTypedRuleContext(GramaticaParser.BloqueContext,0)


        def getRuleIndex(self):
            return GramaticaParser.RULE_sentencia_while

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia_while" ):
                listener.enterSentencia_while(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia_while" ):
                listener.exitSentencia_while(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentencia_while" ):
                return visitor.visitSentencia_while(self)
            else:
                return visitor.visitChildren(self)




    def sentencia_while(self):

        localctx = GramaticaParser.Sentencia_whileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_sentencia_while)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(GramaticaParser.WHILE)
            self.state = 75
            self.match(GramaticaParser.PARENTESIS_INICIAL)
            self.state = 76
            self.expr(0)
            self.state = 77
            self.match(GramaticaParser.PARENTESIS_FINAL)
            self.state = 78
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sentencia_forContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(GramaticaParser.FOR, 0)

        def PARENTESIS_INICIAL(self):
            return self.getToken(GramaticaParser.PARENTESIS_INICIAL, 0)

        def for_inicializacion(self):
            return self.getTypedRuleContext(GramaticaParser.For_inicializacionContext,0)


        def FIN_DE_LINEA(self, i:int=None):
            if i is None:
                return self.getTokens(GramaticaParser.FIN_DE_LINEA)
            else:
                return self.getToken(GramaticaParser.FIN_DE_LINEA, i)

        def for_condicion(self):
            return self.getTypedRuleContext(GramaticaParser.For_condicionContext,0)


        def for_incremento(self):
            return self.getTypedRuleContext(GramaticaParser.For_incrementoContext,0)


        def PARENTESIS_FINAL(self):
            return self.getToken(GramaticaParser.PARENTESIS_FINAL, 0)

        def bloque(self):
            return self.getTypedRuleContext(GramaticaParser.BloqueContext,0)


        def getRuleIndex(self):
            return GramaticaParser.RULE_sentencia_for

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia_for" ):
                listener.enterSentencia_for(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia_for" ):
                listener.exitSentencia_for(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentencia_for" ):
                return visitor.visitSentencia_for(self)
            else:
                return visitor.visitChildren(self)




    def sentencia_for(self):

        localctx = GramaticaParser.Sentencia_forContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_sentencia_for)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(GramaticaParser.FOR)
            self.state = 81
            self.match(GramaticaParser.PARENTESIS_INICIAL)
            self.state = 82
            self.for_inicializacion()
            self.state = 83
            self.match(GramaticaParser.FIN_DE_LINEA)
            self.state = 84
            self.for_condicion()
            self.state = 85
            self.match(GramaticaParser.FIN_DE_LINEA)
            self.state = 86
            self.for_incremento()
            self.state = 87
            self.match(GramaticaParser.PARENTESIS_FINAL)
            self.state = 88
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_inicializacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion_expr(self):
            return self.getTypedRuleContext(GramaticaParser.Asignacion_exprContext,0)


        def getRuleIndex(self):
            return GramaticaParser.RULE_for_inicializacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_inicializacion" ):
                listener.enterFor_inicializacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_inicializacion" ):
                listener.exitFor_inicializacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_inicializacion" ):
                return visitor.visitFor_inicializacion(self)
            else:
                return visitor.visitChildren(self)




    def for_inicializacion(self):

        localctx = GramaticaParser.For_inicializacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_for_inicializacion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==24:
                self.state = 90
                self.asignacion_expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_condicionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(GramaticaParser.ExprContext,0)


        def getRuleIndex(self):
            return GramaticaParser.RULE_for_condicion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_condicion" ):
                listener.enterFor_condicion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_condicion" ):
                listener.exitFor_condicion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_condicion" ):
                return visitor.visitFor_condicion(self)
            else:
                return visitor.visitChildren(self)




    def for_condicion(self):

        localctx = GramaticaParser.For_condicionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_for_condicion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 50331650) != 0):
                self.state = 93
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_incrementoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion_expr(self):
            return self.getTypedRuleContext(GramaticaParser.Asignacion_exprContext,0)


        def expr(self):
            return self.getTypedRuleContext(GramaticaParser.ExprContext,0)


        def getRuleIndex(self):
            return GramaticaParser.RULE_for_incremento

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_incremento" ):
                listener.enterFor_incremento(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_incremento" ):
                listener.exitFor_incremento(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_incremento" ):
                return visitor.visitFor_incremento(self)
            else:
                return visitor.visitChildren(self)




    def for_incremento(self):

        localctx = GramaticaParser.For_incrementoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_for_incremento)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 96
                self.asignacion_expr()

            elif la_ == 2:
                self.state = 97
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LLAVES_INICIAL(self):
            return self.getToken(GramaticaParser.LLAVES_INICIAL, 0)

        def LLAVES_FINAL(self):
            return self.getToken(GramaticaParser.LLAVES_FINAL, 0)

        def instruccion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaParser.InstruccionContext)
            else:
                return self.getTypedRuleContext(GramaticaParser.InstruccionContext,i)


        def getRuleIndex(self):
            return GramaticaParser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloque" ):
                return visitor.visitBloque(self)
            else:
                return visitor.visitChildren(self)




    def bloque(self):

        localctx = GramaticaParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_bloque)
        self._la = 0 # Token type
        try:
            self.state = 109
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.match(GramaticaParser.LLAVES_INICIAL)
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 16779072) != 0):
                    self.state = 101
                    self.instruccion()
                    self.state = 106
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 107
                self.match(GramaticaParser.LLAVES_FINAL)
                pass
            elif token in [6, 8, 9, 10, 24]:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.instruccion()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARENTESIS_INICIAL(self):
            return self.getToken(GramaticaParser.PARENTESIS_INICIAL, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaParser.ExprContext)
            else:
                return self.getTypedRuleContext(GramaticaParser.ExprContext,i)


        def PARENTESIS_FINAL(self):
            return self.getToken(GramaticaParser.PARENTESIS_FINAL, 0)

        def VARIABLE(self):
            return self.getToken(GramaticaParser.VARIABLE, 0)

        def NUMERO(self):
            return self.getToken(GramaticaParser.NUMERO, 0)

        def POW(self):
            return self.getToken(GramaticaParser.POW, 0)

        def MULTIPLICACION(self):
            return self.getToken(GramaticaParser.MULTIPLICACION, 0)

        def DIVISION(self):
            return self.getToken(GramaticaParser.DIVISION, 0)

        def MODULO(self):
            return self.getToken(GramaticaParser.MODULO, 0)

        def MAS(self):
            return self.getToken(GramaticaParser.MAS, 0)

        def MENOS(self):
            return self.getToken(GramaticaParser.MENOS, 0)

        def MAYOR(self):
            return self.getToken(GramaticaParser.MAYOR, 0)

        def MENOR(self):
            return self.getToken(GramaticaParser.MENOR, 0)

        def MAYOR_IGUAL_QUE(self):
            return self.getToken(GramaticaParser.MAYOR_IGUAL_QUE, 0)

        def MENOR_IGUAL_QUE(self):
            return self.getToken(GramaticaParser.MENOR_IGUAL_QUE, 0)

        def IGUAL(self):
            return self.getToken(GramaticaParser.IGUAL, 0)

        def DIFERENTE(self):
            return self.getToken(GramaticaParser.DIFERENTE, 0)

        def getRuleIndex(self):
            return GramaticaParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = GramaticaParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.state = 112
                self.match(GramaticaParser.PARENTESIS_INICIAL)
                self.state = 113
                self.expr(0)
                self.state = 114
                self.match(GramaticaParser.PARENTESIS_FINAL)
                pass
            elif token in [24]:
                self.state = 116
                self.match(GramaticaParser.VARIABLE)
                pass
            elif token in [25]:
                self.state = 117
                self.match(GramaticaParser.NUMERO)
                pass
            else:
                raise NoViableAltException(self)
